--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -7,30 +7,48 @@
         <VerticalStackLayout
             Padding="30,0"
             Spacing="25">
+            
             <Image
                 Source="dotnet_bot.png"
                 HeightRequest="185"
                 Aspect="AspectFit"
                 SemanticProperties.Description="dot net bot in a race car number eight" />
-
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+  
+            <RadioButton
+                x:Name="kostka4"
+                Content="Rzut Koscia 4oczkowa"
+                Value="4"/>
+            
+            <RadioButton
+                x:Name="kostka6"
+                Content="Rzut Koscia 6oczkowa"
+                Value="6"/>
+            
+            <RadioButton
+                x:Name="kostka10"
+                Content="Rzut Koscia 10oczkowa"
+                Value="10"
+                IsChecked="True"/>
+            
+            <RadioButton
+                x:Name="kostka12"
+                Content="Rzut Koscia 12oczkowa"
+                Value="12"/>
 
             <Button
                 x:Name="CounterBtn"
-                Text="Click me" 
+                Text="Ej tu kostka! Weź no rzuć mną!" 
                 SemanticProperties.Hint="Counts the number of times you click"
                 Clicked="OnCounterClicked"
                 HorizontalOptions="Fill" />
+            
+            <Label 
+                x:Name="Wynik"
+                FontSize="Large"
+                HorizontalTextAlignment="Center" />
+            
         </VerticalStackLayout>
     </ScrollView>
 
 </ContentPage>
+<!--Braian K 5g-->
